[fix] width of collapse button

--- a/modules/css/connectionlookout.scss
+++ b/modules/css/connectionlookout.scss
@@ -45,6 +45,10 @@
     border-radius: 8px;
     margin: 0 5px;
     transition: transform 0.5s;
+
+    svg {
+      width: 31px;
+    }
   }
 
   &.narrow {
